website/versioned_docs/version-0.0.6/api/cloud/cloud.md
---
id: "version-0.0.6-cloud"
title: "cloud package"
hide_title: true
original_id: "cloud"
---
<!-- Do not edit this file. It is automatically generated by API Documenter. -->

[Cloud API Overview](overview) &gt; [@adpt/cloud](./cloud.md)

## cloud package

## Classes

|  Class | Description |
|  --- | --- |
|  [Compute](./cloud.compute.md) | <b><i>(BETA)</i></b> Abstract element to represent a computational resource |
|  [Container](./cloud.container.md) | Abstract component representing a container. |
|  [NetworkService](./cloud.networkservice.md) | An abstract component that represents a network service. |
|  [Service](./cloud.service.md) | An abstract component that represents a group of components that implements a service. Note that this is not necessarily a network service, but will often be. |

## Enumerations

|  Enumeration | Description |
|  --- | --- |
|  [NetworkScope](./cloud.networkscope.md) | <b><i>(BETA)</i></b> Type for various network address scopes |

## Functions

|  Function | Description |
|  --- | --- |
|  [isContainerElement(el)](./cloud.iscontainerelement.md) | Function to check whether an <code>@adpt/core#AdaptElement</code> is an abstract [Container](./cloud.container.md)<!-- -->. |
|  [isNetworkServiceElement(el)](./cloud.isnetworkserviceelement.md) | Type assertion that tests an element to see if it is a [NetworkService](./cloud.networkservice.md) |
|  [lookupEnvVar(e, name)](./cloud.lookupenvvar.md) | Find the value of an environment variable in an [Environment](./cloud.environment.md) |
|  [mergeEnvPairs(envs)](./cloud.mergeenvpairs.md) | Combine multiple [Environment](./cloud.environment.md) objects into a single array of [EnvPair](./cloud.envpair.md) objects. Returns <code>undefined</code> if there are no <code>Environment</code> objects provided. |
|  [mergeEnvSimple(envs)](./cloud.mergeenvsimple.md) | Combine multiple [Environment](./cloud.environment.md) objects into a single [EnvSimple](./cloud.envsimple.md) object. Returns <code>undefined</code> if there are no <code>Environment</code> objects provided. |
|  [renameEnvVars(e, mapping)](./cloud.renameenvvars.md) | Renames all variables in <code>e</code> based on <code>mapping</code> |
|  [targetPort(elemOrProps)](./cloud.targetport.md) | Computes the target port that will be used for a NetworkService |
|  [updateEnvVars(e, upd)](./cloud.updateenvvars.md) | Updates the names and/or values of variables in an [Environment](./cloud.environment.md) |
|  [useConnectTo(connectTo, xform)](./cloud.useconnectto.md) | Hook that will build an [Environment](./cloud.environment.md) object from components that comply with [ConnectToInstance](./cloud.connecttoinstance.md) |
|  [useConnectTo(connectTo, options)](./cloud.useconnectto_1.md) | Hook that will build an [Environment](./cloud.environment.md) object from components that comply with [ConnectToInstance](./cloud.connecttoinstance.md) |
|  [useLatestImageFrom(source)](./cloud.uselatestimagefrom.md) | <b><i>(BETA)</i></b> Hook function to translate an [ImageId](./cloud.imageid.md) (which can be either a Handle or an image name string) into an image name string. |

## Interfaces

|  Interface | Description |
|  --- | --- |
|  [ComputeProps](./cloud.computeprops.md) | <b><i>(BETA)</i></b> Props for a [Compute](./cloud.compute.md) element |
|  [Config](./cloud.config.md) | Config for [ContainerStatus](./cloud.containerstatus.md) |
|  [ConnectToInstance](./cloud.connecttoinstance.md) | Components that provide a service, such as a database service or API service, can implement this interface in order to supply all the information required to connect to the service. |
|  [ContainerLabels](./cloud.containerlabels.md) | Labels for a [Container](./cloud.container.md) |
|  [ContainerNetwork](./cloud.containernetwork.md) | Network for [ContainerStatus](./cloud.containerstatus.md) |
|  [ContainerNetworkSettings](./cloud.containernetworksettings.md) | NetworkSettings for [ContainerStatus](./cloud.containerstatus.md) |
|  [ContainerProps](./cloud.containerprops.md) | Props for the [Container](./cloud.container.md) component. |
|  [ContainerState](./cloud.containerstate.md) | State information for a [Container](./cloud.container.md)<!-- -->. |
|  [ContainerStatus](./cloud.containerstatus.md) | Status of a [Container](./cloud.container.md)<!-- -->. |
|  [EnvPair](./cloud.envpair.md) | A single environment variable for a [Container](./cloud.container.md)<!-- -->, expressed as an object with <code>name</code> and <code>value</code> properties. |
|  [EnvSimple](./cloud.envsimple.md) | A set of environment variables for a [Container](./cloud.container.md)<!-- -->, expressed as a single object with keys and associated values. |
|  [Links](./cloud.links.md) | Network links to create for a [Container](./cloud.container.md)<!-- -->. |
|  [NetworkServiceInstance](./cloud.networkserviceinstance.md) | <b><i>(BETA)</i></b> Interface for components that expose Network Services via hostname and port |
|  [NetworkServiceProps](./cloud.networkserviceprops.md) | Props for the [NetworkService](./cloud.networkservice.md) element |
|  [PortBinding](./cloud.portbinding.md) | A set of ports to be bound for a [Container](./cloud.container.md)<!-- -->. |
|  [ServiceProps](./cloud.serviceprops.md) | Props for [Service](./cloud.service.md) |
|  [UseConnectToOptions](./cloud.useconnecttooptions.md) | Options for <code>useConnectTo</code> |

## Namespaces

|  Namespace | Description |
|  --- | --- |
|  [aws](./cloud.aws.md) | <b><i>(BETA)</i></b> AWS library for Adapt. |
|  [docker](./cloud.docker.md) | Docker library for Adapt. |
|  [http](./cloud.http.md) | Adapt components for HTTP |
|  [k8s](./cloud.k8s.md) | Adapt components for Kubernetes |
|  [nginx](./cloud.nginx.md) | Various Adapt Components based on [nginx](https://nginx.org) |
|  [nodejs](./cloud.nodejs.md) | The library for [Node.js](https://nodejs.org) for Adapt. |
|  [postgres](./cloud.postgres.md) | The [Postgres](https://www.postgresql.org) library for Adapt. |

## Type Aliases

|  Type Alias | Description |
|  --- | --- |
|  [Command](./cloud.command.md) | A command to be used when creating a [Container](./cloud.container.md)<!-- -->. |
|  [Environment](./cloud.environment.md) | A set of environment variables for a [Container](./cloud.container.md)<!-- -->. |
|  [EnvPairs](./cloud.envpairs.md) | A set of environment variables for a [Container](./cloud.container.md)<!-- -->, expressed as an array of objects with <code>name</code> and <code>value</code> properties. |
|  [ImageId](./cloud.imageid.md) | An image for a [Container](./cloud.container.md)<!-- -->. |
|  [NetworkServiceScope](./cloud.networkservicescope.md) | Network service scope used by [NetworkService](./cloud.networkservice.md) |
|  [PortDescription](./cloud.portdescription.md) | Description of a network port for a [Container](./cloud.container.md)<!-- -->. |
|  [ServicePort](./cloud.serviceport.md) | Port for [NetworkService](./cloud.networkservice.md) |
